@@ -1,3 +1,9 @@
+2007-06-23  Christian Persch  <chpe@gnome.org>
+
+	* gconf/gconftool.c: (main), (search_key_in_dir),
+	(recurse_subdir_search), (do_search_key): Add --search-key argument.
+	Bug #406329, patch by Richard Hult.
+
 2007-06-21  Christian Persch  <chpe@gnome.org>
 
 	* gconf/gconf-sanity-check.c: (main):
